cambios por beto

--- a/myExam/src/main/webapp/paginas/Login.html
+++ b/myExam/src/main/webapp/paginas/Login.html
@@ -7,7 +7,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-resource/1.6.1/angular-resource.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular-route.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular-sanitize.min.js"></script>
-  
+   <link rel="stylesheet" type="text/css" href="paginas/../estilos/estilo.css">
  <script  src="paginas/app.js"></script>
  <script src="paginas/funcion.js"></script>
  <script src="paginas/controllerDos.js"></script>
