--- a/myExam/src/main/webapp/paginas/informacion.html
+++ b/myExam/src/main/webapp/paginas/informacion.html
@@ -1,10 +1,35 @@
 <center>
 <div>
-<h1>informacion..</h1>
- <h1>{{nombre}}</h1>
- <h1>{{apePat}}</h1>
- <h1>{{apeMat}}</h1>
- <h1>{{edad}}</h1>
-  <h1>{{sexo}}</h1>
+<table>
+  <tr>
+   <td colspan="2"><h1>informacion..</h1></td>
+  </tr>
+  <tr>
+  <td><h1>Nombre:</h1></td>
+  <td> <h1>{{nombre}}</h1></td>
+  </tr>
+  <tr>
+  <td><h1>Apellido paterno:</h1></td>
+  <td>  <h1>{{apePat}}</h1></td>
+  </tr>
+  <tr>
+  <td><h1>Apellido materno:</h1></td>
+  <td> <h1>{{apeMat}}</h1></td>
+  </tr>
+  <tr>
+  <td><h1>Edad:</h1></td>
+  <td> <h1>{{edad}}</h1></td>
+  </tr>
+  <tr>
+  <td>Sexo:</td>
+  <td>  <h1>{{sexo}}</h1></td>
+  </tr>
+</table>
+
+
+
+ 
+ 
+ 
 </div>
 </center>
